[gd_scene load_steps=10 format=2]

[ext_resource path="res://source/world/animal/Animal.gd" type="Script" id=1]
[ext_resource path="res://source/world/animal/Movement.gd" type="Script" id=2]
[ext_resource path="res://fonts/Montserrat-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/png/Square.png" type="Texture" id=4]
[ext_resource path="res://assets/wav/Jump.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]

size = 50
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 50, 50 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 50, 50 )

[sub_resource type="AudioStreamRandomPitch" id=4]

audio_stream = ExtResource( 5 )
random_pitch = 1.5

[node name="Animal" type="KinematicBody2D" groups=[
"Animals",
]]
input_pickable = false
collision_layer = 1
collision_mask = 0
collision/safe_margin = 0.08
motion/sync_to_physics = false
script = ExtResource( 1 )

[node name="Movement" type="Node2D" parent="."]
script = ExtResource( 2 )
gravity = 5000
damping = 0.1
time_to_max_speed = 0.25
time_to_jump_apex = 0.35

[node name="OnFloorTimer" type="Timer" parent="Movement"]
process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[node name="JumpTimer" type="Timer" parent="Movement"]
process_mode = 1
wait_time = 0.25
one_shot = true
autostart = false

[node name="VelocityLabel" type="Label" parent="Movement"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -150.0
margin_top = -100.0
margin_right = 150.0
margin_bottom = -38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "(0, 0)"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GroundDetector" type="Area2D" parent="Movement"]
position = Vector2( 0, 40 )
scale = Vector2( 0.4, 0.4 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 1026
audio_bus_override = false
audio_bus_name = "Master"

[node name="Shape" type="CollisionShape2D" parent="Movement/GroundDetector"]
position = Vector2( -3.8147e-006, 0 )
shape = SubResource( 2 )

[node name="Shape" type="CollisionShape2D" parent="."]
scale = Vector2( 0.4, 0.4 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = SubResource( 4 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[connection signal="jumped" from="." to="JumpSound" method="play"]
[connection signal="timeout" from="Movement/JumpTimer" to="Movement" method="_on_JumpTimer_timeout"]
